--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "build-catelog": "ts-node --project ./tsconfig.build.json ./backend/build-catelog.ts",
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
     "dev:es-server": "ts-node --project ./tsconfig.build.json ./backend/es-server.ts",
+    "init-config": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts config",
+    "init-parsed": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts parsed",
+    "init-raw": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts raw",
+    "init-ocr_cache": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_cache",
+    "init-ocr_patch": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_patch",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
     "hack-mui": "sed -i'' -e 's/return React/return LicenseStatus.Valid;return React/g' node_modules/@mui/x-license-pro/useLicenseVerifier/useLicenseVerifier.js",
     "build": "npm run hack-mui && next build",
