--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ book_catelog.json
 music_catelog.json
 gallery_catelog.json
 article_indexes.json
+
+config/archives*
+parsed/archives*
+ocr_cache/archives*
+ocr_patch/archives*
+raw/archives*
