--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "epub": "^1.2.1",
     "express": "^4.18.1",
     "fast-xml-parser": "^4.3.2",
+    "file-type": "^19.0.0",
     "fs-extra": "^10.1.0",
     "iconv-lite": "^0.6.3",
     "image-size": "^1.0.2",
