--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "epub": "^1.2.1",
     "express": "^4.18.1",
     "fast-xml-parser": "^4.3.2",
-    "file-type": "^19.0.0",
+    "file-type": "^17.0.0",
+    "file-type-cjs": "^1.0.7",
     "fs-extra": "^10.1.0",
     "iconv-lite": "^0.6.3",
     "image-size": "^1.0.2",
