--- a/.github/workflows/automated_document_entry.yml
+++ b/.github/workflows/automated_document_entry.yml
@@ -35,6 +35,11 @@ jobs:
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
+
+      - run: git config --global http.postBuffer 2097152000
+      - run: git config --global user.email "you@example.com"
+      - run: git config --global user.name "Your Name"
+
       - name: init subm
         run: |
           rm -rf raw/archives${{ steps.get_archive_id.outputs.archive_id }}
