--- a/.github/workflows/automated_document_entry.yml
+++ b/.github/workflows/automated_document_entry.yml
@@ -39,15 +39,23 @@ jobs:
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
       - run: git config --global user.name "Your Name"
+      - run: mkdir -p raw
+      - run: mkdir -p config
 
-      - name: init subm
-        run: |
-          rm -rf raw/archives${{ steps.get_archive_id.outputs.archive_id }}
-          rm -rf config/archives${{ steps.get_archive_id.outputs.archive_id }}
-          mkdir -p raw
-          mkdir -p config
-          git clone --depth 1 --branch main git@github.com:banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }} raw/archives${{ steps.get_archive_id.outputs.archive_id }}
-          git clone --depth 1 --branch config git@github.com:banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }} config/archives${{ steps.get_archive_id.outputs.archive_id }}
+      - name: init subm raw
+        uses: actions/checkout@v4
+        with:
+          repository: 'banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}'
+          ref: 'main'
+          token: ${{ secrets.GH_PAT }}
+          path: 'raw/archives${{ steps.get_archive_id.outputs.archive_id }}'
+      - name: init subm config
+        uses: actions/checkout@v4
+        with:
+          repository: 'banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}'
+          ref: 'config'
+          token: ${{ secrets.GH_PAT }}
+          path: 'config/archives${{ steps.get_archive_id.outputs.archive_id }}'
       - id: action_with_json_output
         run: npx ts-node --project ./tsconfig.build.json backend/gitworkflow-automated-document-entry.ts
         env:
