--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,16 @@ jobs:
       - run: node_options="--max-old-space-size=8192" npm run build-catelog
       - run: node_options="--max-old-space-size=8192" npm run dev:nextjs-helper && npm run build
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          force: true
-          folder: out
-          clean: true
+      - run: git checkout --orphan x
+      - run: git reset --hard
+      - run: mv out/* .
+      - run: git add .
+      - run: git commit -m i
+      - run: git push origin x:gh-pages -f
+
+      # - name: Deploy 🚀
+      #   uses: JamesIves/github-pages-deploy-action@v4
+      #   with:
+      #     force: true
+      #     folder: 'out'
+      #     clean: true
