--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       - run: mv out ../out
       - run: ls -Q | grep -v ".git" | xargs rm -fr
       - run: mv ../out/* ./
+      - run: touch .nojekyll
       - run: git add .
       - run: git commit -m i
       - run: git push origin x:gh-pages -f
