--- a/.prettierignore
+++ b/.prettierignore
@@ -16,6 +16,8 @@ book_catelog.json
 music_catelog.json
 gallery_catelog.json
 article_indexes.json
+book_indexes.json
+tag_indexes.json
 
 config/archives*
 parsed/archives*
