--- a/.github/workflows/automated_entry.yml
+++ b/.github/workflows/automated_entry.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   automated_document_entry:
     name: Automated document entry
-    if: ${{ startsWith(github.event.issue.title, '[自动化文稿录入]') }}
+    if: ${{ startsWith(github.event.issue.title, '[自动化录入]') }}
     runs-on: ubuntu-latest
     steps:
       - name: Get Time
@@ -66,7 +66,7 @@ jobs:
           cd raw/archives${{ steps.get_archive_id.outputs.archive_id }}
           git checkout -b feat/${{ steps.generate-uuid.outputs.uuid }}
           git add .
-          git commit -m "feat: [自动化文稿录入]${{ steps.get_safe_title.outputs.safe_title}}"
+          git commit -m "feat: [自动化录入]${{ steps.get_safe_title.outputs.safe_title}}"
           git push origin feat/${{ steps.generate-uuid.outputs.uuid }}
           curl \
           -X POST \
@@ -74,7 +74,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
           https://api.github.com/repos/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}/pulls \
           -d "{
-            \"title\": \"[自动化文稿录入]${{ steps.get_safe_title.outputs.safe_title}}\",
+            \"title\": \"[自动化录入]${{ steps.get_safe_title.outputs.safe_title}}\",
             \"body\": \"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}\",\"head\":\"feat/${{ steps.generate-uuid.outputs.uuid }}\",
             \"base\":\"main\"}"
       - name: Create Pull Request For Config
@@ -82,7 +82,7 @@ jobs:
           cd config/archives${{ steps.get_archive_id.outputs.archive_id }}
           git checkout -b feat/config-${{ steps.generate-uuid.outputs.uuid }}
           git add .
-          git commit -m "feat: [自动化文稿录入]${{ steps.get_safe_title.outputs.safe_title}}"
+          git commit -m "feat: [自动化录入]${{ steps.get_safe_title.outputs.safe_title}}"
           git push origin feat/config-${{ steps.generate-uuid.outputs.uuid }}
           curl \
           -X POST \
@@ -90,6 +90,6 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
           https://api.github.com/repos/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}/pulls \
           -d "{
-            \"title\": \"[自动化文稿录入]${{ steps.get_safe_title.outputs.safe_title}}\",
+            \"title\": \"[自动化录入]${{ steps.get_safe_title.outputs.safe_title}}\",
             \"body\": \"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}\",\"head\":\"feat/config-${{ steps.generate-uuid.outputs.uuid }}\",
             \"base\":\"config\"}"
