--- a/.github/workflows/automated_entry.yml
+++ b/.github/workflows/automated_entry.yml
@@ -1,11 +1,11 @@
-name: automated_document_entry
+name: automated_entry
 on:
   issues:
     types: [opened]
 
 jobs:
-  automated_document_entry:
-    name: Automated document entry
+  automated_entry:
+    name: Automated entry
     if: ${{ startsWith(github.event.issue.title, '[自动化录入]') }}
     runs-on: ubuntu-latest
     steps:
@@ -57,7 +57,7 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           path: 'config/archives${{ steps.get_archive_id.outputs.archive_id }}'
       - id: action_with_json_output
-        run: npx ts-node --project ./tsconfig.build.json backend/gitworkflow-automated-document-entry.ts
+        run: npx ts-node --project ./tsconfig.build.json backend/gitworkflow-automated-entry.ts
         env:
           BODY: ${{ github.event.issue.body }}
           TITLE: ${{ github.event.issue.title }}
