--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -25,18 +25,18 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      - id: get_archive_id
-        run: echo ::set-output name=archive_id::$(npx ts-node --project ./tsconfig.build.json backend/gitworkflow-get-archive-id.ts)
-        env:
-          BODY: ${{ github.event.issue.body }}
-          TITLE: ${{ github.event.issue.title }}
       - id: get_safe_title
         run: echo ::set-output name=safe_title::$(npx ts-node --project ./tsconfig.build.json backend/gitworkflow-get-safe-title.ts)
         env:
           TITLE: ${{ github.event.issue.title }}
       - run: node_options="--max-old-space-size=8192" npm run init-parsed
       - run: node_options="--max-old-space-size=8192" npm run build-catelog
-      - run: npx npx --project ./tsconfig.build.json backend/gitworkflow-patch.ts
+      - id: get_archive_id
+        run: echo ::set-output name=archive_id::$(npx ts-node --project ./tsconfig.build.json backend/gitworkflow-get-archive-id.ts)
+        env:
+          BODY: ${{ github.event.issue.body }}
+          TITLE: ${{ github.event.issue.title }}
+      - run: npx ts-node --project ./tsconfig.build.json backend/gitworkflow-patch.ts
         env:
           COMMIT_HASH: ${{ github.sha }}
           BODY: ${{ github.event.issue.body }}
