--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -68,5 +68,5 @@ jobs:
           https://api.github.com/repos/banned-historical-archives/banned-historical-archives${{ steps.get_archive_id.outputs.archive_id }}/pulls \
           -d "{
             \"title\": \"[OCR Patch]${{ steps.get_safe_title.outputs.safe_title}}\",
-            \"body\": \"https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}\",\"head\":\"feat/${{ steps.generate-uuid.outputs.uuid }}\",
+            \"body\": \"close https://github.com/banned-historical-archives/banned-historical-archives.github.io/issues/${{github.event.issue.number}}\",\"head\":\"feat/${{ steps.generate-uuid.outputs.uuid }}\",
             \"base\":\"ocr_patch\"}"
