--- a/.github/workflows/build-txt.yml
+++ b/.github/workflows/build-txt.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v3
       - run: npm install
       - run: node_options="--max-old-space-size=8192" npm run init-parsed
+      - run: node_options="--max-old-space-size=8192" npm run init-config
       - run: node_options="--max-old-space-size=8192" npm run build-catelog
       - run: node_options="--max-old-space-size=8192" npm run dev:nextjs-helper && npm run build-txt
       - run: git config --global http.postBuffer 2097152000
