--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "init-ocr_cache": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_cache",
     "init-ocr_patch": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_patch",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
-    "hack-mui": "sed -i'' -e 's/return React/return LicenseStatus.Valid;return React/g' node_modules/@mui/x-license/useLicenseVerifier/useLicenseVerifier.js",
+    "hack-mui": "sed -i'' -e 's/return React/return LICENSE_STATUS.Valid;return React/g' node_modules/@mui/x-license/useLicenseVerifier/useLicenseVerifier.js",
     "build": "npm run hack-mui && next build",
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
