--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
       - run: ls -Q | grep -v ".git" | xargs rm -fr
       - run: mv ../out/* ./
       - run: touch .nojekyll
+      - run: rm -rf .next
       - run: git add .
       - run: git commit -m i
       - run: git push origin x:gh-pages -f
