--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "banned-historical-archives.github.io",
   "version": "0.1.0",
   "scripts": {
-    "dev:nextjs-helper": "ts-node --project ./tsconfig.build.json ./backend/nextjs-helper &",
+    "dev:nextjs-helper": "ts-node --project ./tsconfig.build.json ./backend/nextjs-helper",
     "build-catelog": "ts-node --project ./tsconfig.build.json ./backend/build-catelog.ts",
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
     "init-config": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts config",
@@ -55,8 +55,8 @@
     "json5": "^2.2.2",
     "memo_file": "^1.1.0",
     "mysql2": "^2.3.3",
-    "next": "^14.0.4",
-    "next-sitemap": "^3.1.13",
+    "next": "^15.0.3",
+    "next-sitemap": "^4.2.3",
     "node-fetch": "^2.6.7",
     "pdf-parse": "^1.1.1",
     "pdf.js": "^0.1.0",
