--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "init-ocr_cache": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_cache",
     "init-ocr_patch": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_patch",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
-    "hack-mui": "sed -i'' -e 's/return React.useMemo(() => {/return React\\.useMemo\\(\\(\\) => \\{return LICENSE_STATUS\\.Valid;/g' node_modules/@mui/x-license/useLicenseVerifier/useLicenseVerifier.js",
-    "build": "next build",
+    "hack-mui": "sed -i'' -e 's/switch/return;switch/g' node_modules/@mui/x-license/Watermark/Watermark.js",
+    "build": "npm run hack-mui && next build",
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "postbuild": "next-sitemap",
