--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "init-ocr_cache": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_cache",
     "init-ocr_patch": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository ocr_patch",
     "init-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts",
+    "reset-es": "ts-node --project ./tsconfig.build.json ./backend/init-es.ts reset",
     "hack-mui": "sed -i'' -e 's/switch/return;switch/g' node_modules/@mui/x-license/Watermark/Watermark.js",
     "build": "npm run hack-mui && next build",
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "postbuild": "next-sitemap",
-    "start": "next start",
+    "start": "npm run init-es && next start",
     "lint": "next lint",
     "prettier": "prettier -w ."
   },
