--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-txt": "ts-node --project ./tsconfig.build.json ./backend/build-txt.ts",
     "cp-pdfjs": "cp -r ./node_modules/pdfjs-dist ./public/",
     "postbuild": "next-sitemap",
-    "start": "npm run init-es && next start",
+    "start": "npm run init-es && npx serve@latest out",
     "lint": "next lint",
     "prettier": "prettier -w ."
   },
