--- a/.github/workflows/build-txt.yml
+++ b/.github/workflows/build-txt.yml
@@ -9,6 +9,9 @@ permissions:
 jobs:
   container-job:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
