--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev:nextjs-helper": "ts-node --project ./tsconfig.build.json ./backend/nextjs-helper",
     "build-catelog": "ts-node --project ./tsconfig.build.json ./backend/build-catelog.ts",
+    "build-indexes": "ts-node --project ./tsconfig.build.json ./backend/build-indexes.ts",
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
     "init-config": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts config",
     "init-parsed": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts parsed",
