--- a/.github/workflows/build-json.yml
+++ b/.github/workflows/build-json.yml
@@ -1,8 +1,8 @@
 name: build-json
 on:
-  workflow_dispatch:
-  push:
-    branches: ['master']
+  workflow_run:
+    workflows: ["build-indexes"]
+    types: [completed]
 
 permissions:
   contents: write
@@ -19,8 +19,8 @@ jobs:
       - run: npm install
       - run: node_options="--max-old-space-size=8192" npm run init-parsed
       - run: node_options="--max-old-space-size=8192" npm run init-config
-      - run: node_options="--max-old-space-size=8192" npm run build-catelog
-      - run: node_options="--max-old-space-size=8192" npm run dev:nextjs-helper
+      - run: node_options="--max-old-space-size=8192" npm run build-indexes
+      - run: node_options="--max-old-space-size=8192" npm run build-article-json
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
       - run: git config --global user.name "Your Name"
