--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,8 @@ jobs:
       - run: cp -r ./node_modules/pdfjs-dist ./public/
       - run: node_options="--max-old-space-size=8192" npm run init-parsed
       - run: node_options="--max-old-space-size=8192" npm run init-config
-      - run: node_options="--max-old-space-size=8192" npm run build-catelog
-      - run: node_options="--max-old-space-size=8192" npm run dev:nextjs-helper && npm run build
+      - run: node_options="--max-old-space-size=8192" npm run build-indexes
+      - run: node_options="--max-old-space-size=8192" npm run build-article-json && npm run build
 
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
