--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "banned-historical-archives.github.io",
   "version": "0.1.0",
   "scripts": {
-    "dev:nextjs-helper": "ts-node --project ./tsconfig.build.json ./backend/nextjs-helper",
-    "build-catelog": "ts-node --project ./tsconfig.build.json ./backend/build-catelog.ts",
+    "build-article-json": "ts-node --project ./tsconfig.build.json ./backend/build-article-json.ts",
     "build-indexes": "ts-node --project ./tsconfig.build.json ./backend/build-indexes.ts",
     "dev": "COMMIT_HASH=$(git rev-parse HEAD) next dev",
     "init-config": "ts-node --project ./tsconfig.build.json ./backend/init-sub-repository.ts config",
