--- a/.github/workflows/build-txt.yml
+++ b/.github/workflows/build-txt.yml
@@ -12,6 +12,7 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
