--- a/.github/workflows/build-json.yml
+++ b/.github/workflows/build-json.yml
@@ -23,6 +23,7 @@ jobs:
           path: 'tmp_indexes'
       - run: npm install
       - run: mv tmp_indexes/indexes ./
+      - run: node_options="--max-old-space-size=8192" npm run init-parsed
       - run: node_options="--max-old-space-size=8192" npm run build-article-json
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
