--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -1,7 +1,7 @@
 name: build-frontend
 on:
   workflow_run:
-    workflows: ["build"]
+    workflows: ['build']
     types: [completed]
 
 permissions:
