--- a/.github/workflows/build-txt.yml
+++ b/.github/workflows/build-txt.yml
@@ -28,6 +28,7 @@ jobs:
           path: 'tmp_json'
       - run: mv tmp_json/json ./
       - run: mv tmp_indexes/indexes ./
+      - run: node_options="--max-old-space-size=8192" npm run init-parsed
       - run: node_options="--max-old-space-size=8192" npm run build-txt
       - run: git config --global http.postBuffer 2097152000
       - run: git config --global user.email "you@example.com"
